# Expression-parser

./: .cproject  .project  CMakeLists.txt  Makefile  README.md  clean.bat  clean.sh  compile.bat  compile.sh  config_file  expression_parser.cpp  expression_parser.hpp  install  linux  main.cpp  run  run.bat  win.bat
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
function/: function.cpp  function.hpp
include/: expression_parser.hpp  integral_calculator.hpp
linux-scripts/: compile  run
src/: expression_parser.cpp  expression_parser.hpp  integral_calculator.cpp  main.cpp
win-scripts/: clean.bat  compile.bat  run.bat
